# nondb

./: .coverage  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
examples/: proto.py
src/nondb/: NoDB.py  NoIndex.py  NoTable.py  NonDB.py  NonIndex.py  NonTable.py  Storage.py  __init__.py
tests/: smoke_test.py  test_NonDB.py  test_NonIndex.py
tests/nondb/: test_NonDB.py  test_NonIndex.py  test_NonTable.py  test_Storage.py
