[project]
name = "nondb"
version = "0.1.4"
description = "A document store for Pydantic models"
authors = [
    {name = "slank",email = "slank@smacky.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jmespath>=1.0.1",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/slank/nondb"
Repository = "https://github.com/slank/nondb.git"

[dependency-groups]
dev = [
    "ipykernel",
    "black",
    "coverage",
    "mypy",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.11.0"]
build-backend = "uv_build"
